# beholder

./: README.md  main.py  pyproject.toml
beholder/core/: browser.py  cli.py  templates.py
beholder/data/templates/bing/: emails.j2  emails.json
beholder/data/templates/google/: emails.json
beholder/engines/: __init__.py  bing.py  google.py
beholder/utils/: parse.py  paths.py
